--- a/package.json
+++ b/package.json
@@ -29,12 +29,18 @@
     "/public/build"
   ],
   "dependencies": {
+    "@chakra-ui/react": "^2.6.0",
+    "@emotion/react": "^11.10.8",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.8",
+    "@heroicons/react": "^2.0.17",
     "@prisma/client": "^4.12.0",
     "@remix-run/css-bundle": "^1.15.0",
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
     "@remix-run/serve": "^1.15.0",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^6.5.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
