--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
     "@remix-run/serve": "^1.15.0",
+    "@remix-run/v1-route-convention": "^0.1.1",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-highlight": "^6.0.0",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
@@ -66,6 +68,7 @@
     "@svgr/plugin-jsx": "^7.0.0",
     "@svgr/plugin-prettier": "^7.0.0",
     "@svgr/plugin-svgo": "^7.0.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
