--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typecheck": "tsc && tsc -p cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
     "icons": "npx @svgr/cli --out-dir app/components/icons -- app/icons",
+    "build:icons": "npx @svgr/cli --out-dir app/components/icons -- app/icons",
     "icons:watch": "npm-watch icons",
     "dev:svg": "run-s icons icons:watch"
   },
