--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.8",
     "@heroicons/react": "^2.0.17",
+    "@next-boost/hybrid-disk-cache": "^0.3.0",
     "@prisma/client": "^4.12.0",
     "@remix-run/css-bundle": "^1.15.0",
     "@remix-run/node": "^1.15.0",
@@ -59,6 +60,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-highlight": "^6.0.0",
+    "remix-image": "^1.4.0",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
