--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-dom": "^18.2.0",
     "rehype-highlight": "^6.0.0",
     "remix-image": "^1.4.0",
+    "remix-image-sharp": "^0.1.4",
+    "sharp": "^0.32.1",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
