--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@remix-run/v1-route-convention": "^0.1.1",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
+    "intl-parse-accept-language": "^1.0.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
