--- a/fly.toml
+++ b/fly.toml
@@ -19,7 +19,7 @@ kill_timeout = "5s"
 
 [[services]]
   protocol = "tcp"
-  internal_port = 3000
+  internal_port = 8_080
   processes = ["app"]
 
   [[services.ports]]
