--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 DATABASE_URL="file:./data.db?connection_limit=1"
 SESSION_SECRET="super-duper-s3cret"
-GITHUB_API_KEY="my-key"
+PERSONAL_GITHUB_API_KEY="my-key"
