--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="file:./data.db?connection_limit=1"
 SESSION_SECRET="super-duper-s3cret"
 PERSONAL_GITHUB_API_KEY="my-key"
+ENDPOINT_URL="localhost"
